@@ -1035,6 +1035,28 @@ BEGIN_RCPP
     return rcpp_result_gen;
 END_RCPP
 }
+// addHolidays
+void addHolidays(std::string calendar, std::vector<QuantLib::Date> dates);
+RcppExport SEXP _RQuantLib_addHolidays(SEXP calendarSEXP, SEXP datesSEXP) {
+BEGIN_RCPP
+    Rcpp::RNGScope rcpp_rngScope_gen;
+    Rcpp::traits::input_parameter< std::string >::type calendar(calendarSEXP);
+    Rcpp::traits::input_parameter< std::vector<QuantLib::Date> >::type dates(datesSEXP);
+    addHolidays(calendar, dates);
+    return R_NilValue;
+END_RCPP
+}
+// removeHolidays
+void removeHolidays(std::string calendar, std::vector<QuantLib::Date> dates);
+RcppExport SEXP _RQuantLib_removeHolidays(SEXP calendarSEXP, SEXP datesSEXP) {
+BEGIN_RCPP
+    Rcpp::RNGScope rcpp_rngScope_gen;
+    Rcpp::traits::input_parameter< std::string >::type calendar(calendarSEXP);
+    Rcpp::traits::input_parameter< std::vector<QuantLib::Date> >::type dates(datesSEXP);
+    removeHolidays(calendar, dates);
+    return R_NilValue;
+END_RCPP
+}
 // advanceDate
 QuantLib::Date advanceDate(QuantLib::Date issueDate, int days);
 static SEXP _RQuantLib_advanceDate_try(SEXP issueDateSEXP, SEXP daysSEXP) {
@@ -1694,6 +1716,8 @@ static const R_CallMethodDef CallEntries[] = {
     {"_RQuantLib_advance2", (DL_FUNC) &_RQuantLib_advance2, 5},
     {"_RQuantLib_businessDaysBetween", (DL_FUNC) &_RQuantLib_businessDaysBetween, 5},
     {"_RQuantLib_getHolidayList", (DL_FUNC) &_RQuantLib_getHolidayList, 4},
+    {"_RQuantLib_addHolidays", (DL_FUNC) &_RQuantLib_addHolidays, 2},
+    {"_RQuantLib_removeHolidays", (DL_FUNC) &_RQuantLib_removeHolidays, 2},
     {"_RQuantLib_advanceDate", (DL_FUNC) &_RQuantLib_advanceDate, 2},
     {"_RQuantLib_dayCount", (DL_FUNC) &_RQuantLib_dayCount, 3},
     {"_RQuantLib_yearFraction", (DL_FUNC) &_RQuantLib_yearFraction, 3},
