@@ -304,3 +304,21 @@ std::vector<QuantLib::Date> getHolidayList(std::string calendar,
     std::vector<QuantLib::Date> holidays = QuantLib::Calendar::holidayList(*pcal, from, to, includeWeekends);
     return holidays;
 }
+
+// [[Rcpp::export]]
+void addHolidays(std::string calendar, std::vector<QuantLib::Date> dates) {
+    boost::shared_ptr<QuantLib::Calendar> pcal(getCalendar(calendar));
+    int n = dates.size();
+    for (int i=0; i<n; i++) {
+        pcal->addHoliday(dates[i]);
+    }
+}
+
+// [[Rcpp::export]]
+void removeHolidays(std::string calendar, std::vector<QuantLib::Date> dates) {
+    boost::shared_ptr<QuantLib::Calendar> pcal(getCalendar(calendar));
+    int n = dates.size();
+    for (int i=0; i<n; i++) {
+        pcal->removeHoliday(dates[i]);
+    }
+}
